# MemberManagement

./: .dockerignore  .gitignore  .tool-versions  .travis.yml  Dockerfile  LICENSE  README.md  crunch_subs.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  snapshots.csv  subscriptions.json  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: docker-latest.yml  docker-prod.yml  main.yml
MemberManagement/: asgi.py  context_processors.py  docker_settings.py  mailutils.py  mixins.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
MemberManagement/tests/: integration.py  selenium.py  test_access.py  test_cookies.py  test_home.py  test_pep8.py
alumni/: actions.py  admin.py  apps.py  fields.py  forms.py  models.py  urls.py  utils.py  views.py
alumni/admin/: __init__.py  actions.py  inlines.py  list.py  search.py  stats.py
alumni/fields/: __init__.py  category.py  college.py  country.py  custom.py  degree.py  gender.py  industry.py  job.py  major.py  payment.py  tier.py  year.py
alumni/migrations/: 0001_initial.py  0002_alumni_resetexistingemailpassword.py  0002_auto_20171127_1358.py  0003_alumni_createmissingapprovals.py  0003_auto_20171127_1822.py  0004_auto_20180114_1158.py  0004_paymentinformation.py  0005_auto_20171202_0956.py  0005_paymentinformation_payment_type.py  0006_auto_20171202_1612.py  0006_auto_20180331_1523.py  0007_approval_gsuite.py  0007_auto_20190115_2315.py  0008_auto_20171202_1642.py  0008_auto_20190202_2238.py  0009_auto_20171203_1515.py  0009_auto_20190218_0902.py  0010_address_addressvisible.py  0010_auto_20190309_1449.py  0011_delete_geolocation.py  0011_jacobsdata_comments.py  0012_auto_20190309_1630.py  0012_skills.py  0013_auto_20190309_1652.py  0013_paymentinformation_starterreason.py  0014_auto_20190310_1245.py  0015_auto_20190318_2009.py  0016_setupcompleted.py  0017_approval_time.py  0018_auto_20200210_1659.py  0019_auto_20200322_1416.py  0020_auto_20200412_1210.py  0021_approval_autocreated.py  0022_jacobsdata_transferoptout.py
alumni/templatetags/: changelist_link.py
alumni/tests/: test_001_admin.py  test_002_admin_export.py  test_003_csvparser.py
assets/src/: globals.d.ts
atlas/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
atlas/migrations/: 0001_initial.py  0002_atlassettings.py  0003_auto_20220925_1250.py  0004_atlassettings_reducedaccuracy.py
atlas/tests/: test_01_geocache.py  test_02_search.py  test_03_profile.py  test_geocache.py
custom_auth/: admin.py  alumni.py  apps.py  authutils.py  backend.py  forms.py  gsuite.py  mailutils.py  models.py  tests.py  urls.py  views.py
custom_auth/migrations/: 0001_initial.py
custom_auth/tests/: test_01_login_email.py
custom_auth/utils/: auth.py  gsuite.py
django_forms_uikit/: README.rst  models.py  widgets.py
django_forms_uikit/templatetags/: uikit_tags.py
docker/: django.conf  entrypoint.sh  uwsgi.ini
donation_receipts/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
donation_receipts/migrations/: 0001_initial.py  0002_auto_20201102_2128.py  0003_auto_20201102_2233.py  0004_auto_20201103_2012.py  0005_auto_20201103_2014.py  0006_donationreceipt_finalized.py  0007_donationreceipt_internal_notes.py  0008_auto_20201110_0907.py  0009_auto_20201118_1004.py  0010_auto_20201129_1011.py  0011_auto_20220908_1343.py
donation_receipts/templatetags/: receipt_extras.py
donations/: __init__.py  admin.py  apps.py  consumers.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
donations/migrations/: 0001_initial.py  0002_auto_20220818_1953.py  0003_auto_20220818_2019.py  0004_auto_20220820_0928.py  0005_auto_20220906_2036.py  (+3 more)
payments/: __init__.py  admin.py  alumni.py  apps.py  context_processors.py  forms.py  models.py  plans.py  stripewrapper.py  urls.py  views.py
registry/: admin.py  alumni.py  apps.py  context_processors.py  decorators.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
(+271 files in other folders)
