[tool.poetry]
name = "membermanagement"
version = "0.1.0"
description = "The Django Application for managing Jacobs University Bremen Alumni Members."
authors = ["Tom Wiesing <tkw01536@gmail.com>", "Leonhard Kuboschek <leo@kuboschek.me>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=4.2.10"
django-countries = "^7.5.0"
django-cookie-law = "^2.2.0"
django-impersonate = "^1.9.1"
jsonfield = "^3.1.0"
openpyxl = "^3.1.2"
raven = "^6.10.0"
stripe = "^10.8.0"
google-auth = "^2"
django-sesame = "^3.2"
pre-js-py = "^1.2.0"
google-api-python-client = "2.141.0"
beautifulsoup4 = "^4.12.2"
django-htmlmin = "^0.11.0"
requests = "^2.32.0"
tqdm = "^4.65.0"
django-webpack5-loader = "0.9.1"
django-extensions = "^3.2.3"
djangorestframework = "^3.14.0"
django-money = "^3"
py-moneyed = "^3.0"
django-pdf-render = "^0.1.3"
channels = "^4.0.0"
channels-redis = "^4.1.0"
whitenoise = "^6.2.0"
lxml = "^5.3.0"
pytz = "^2024.1"

[tool.poetry.dev-dependencies]
pycodestyle = "2.12.1"
pytest = "8.3.2"
pytest-django = "4.8.0"
selenium = "~=4.11"
django-selenium-test = "~=2.0.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^24.8.0", allow-prereleases = true}
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
